- lpd-errs needs to be owned by daemon

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -14,7 +14,7 @@
 /var/log/kerberos.log         640  10    *    24  Z0   /dev/null
 /var/log/kern                 644  10    500  *   Z0
 /var/log/local                644  10    *    168 Z0
-/var/log/lpd-errs             644  4     100  *   Z0
+/var/log/lpd-errs daemon:staff 644 4     100  *   Z0
 /var/log/lpr                  644  5     250  *   Z0
 /var/log/mail   root:staff    640  52    *    168 Z0
 /var/log/messages             644  10    *    168 Z0
