--- a/configure.in
+++ b/configure.in
@@ -8,10 +8,10 @@ dnl             see COPYING for details
 AC_INIT(newsyslog.c)
 AC_PREREQ(2.12)dnl Required Autoconf version.
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.25 2000/07/07 17:34:02 woods Exp $"])dnl
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.26 2000/07/07 17:39:57 woods Exp $"])dnl
 
 PACKAGE=newsyslog
-VERSION=1.0.97
+VERSION=1.0.98-Preview
 
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
