- add sigtype example.

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -1,17 +1,17 @@
 #
 # sample configuration file for newsyslog
 #
-# log_filename  [owner.group] mode count kb   hrs [ZB0][/pid_file]
-#               |             |    |     |    |   |    |
-/var/log/aculog uucp.dialer   640  10    *    24  Z0   /dev/null
+# log_filename  [owner.group] mode count kb   hrs [flgs][/pid_file] [sig]
+#               |             |    |     |    |   |     |
+/var/log/aculog uucp:dialer   640  10    *    24  Z0    /dev/null   INT
 /var/log/auth                 640  10    100  *   Z0
 /var/log/authpriv             640  10    100  *   Z0
-/var/log/cron                 640  3     *    24  Z
-/var/log/daemon               644  4     500  *   Z
-/var/log/debug                640  4     1000 *   Z
-/var/log/httpd/access_log     644  5     *    168 Z0   /var/run/httpd.pid
-/var/log/httpd/error_log      644  5     *    168 Z0   /var/run/httpd.pid
-/var/log/kerberos.log         640  10    *    24  Z0   /dev/null
+/var/log/cron                 640  3     *    24  Z0                HUP
+/var/log/daemon               644  4     500  *   Z0
+/var/log/debug                640  4     1000 *   Z0
+/var/log/httpd/access_log     644  5     *    168 Z0    # only last one
+/var/log/httpd/error_log      644  5     *    168 Z0    /var/run/httpd.pid
+/var/log/kerberos.log         640  10    *    24  Z0    /dev/null
 /var/log/kern                 644  10    500  *   Z0
 /var/log/local                644  10    *    168 Z0
 /var/log/lpd-errs daemon:staff 644 4     100  *   Z0
@@ -19,8 +19,8 @@
 /var/log/mail   root:staff    640  52    *    168 Z0
 /var/log/messages             644  10    *    168 Z0
 /var/log/news   news:news     644  2     *    24  Z0
-/var/log/smail/logfile        644  5     *    168 Z0   /dev/null
-/var/log/smail/paniclog       644  5     *    168 Z0   /dev/null
+/var/log/smail/logfile        644  5     *    168 Z0    /dev/null
+/var/log/smail/paniclog       644  5     *    168 Z0    /dev/null
 /var/log/syslog               640  3     500  *   Z0
 /var/log/user                 644  10    500  *   Z0
 /var/log/uucp   uucp:operator 644  5     *    168 Z0
