--- a/Makefile.BSD.in
+++ b/Makefile.BSD.in
@@ -3,8 +3,13 @@
 #
 # This file Copyright (C) 1998,1999 Planix, Inc. -- see COPYING for details.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.BSD.in,v 1.5 2000/11/27 00:41:24 woods Exp $"
-
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.BSD.in,v 1.6 2000/12/01 19:46:52 woods Exp $"
+#
+# NOTE:  It is expected that this file will be processed to create the
+# final version with:
+#
+#	./configure --prefix=/usr --bindir=/usr/bin --sysconfdir=/etc --localstatedir=/var --with-newsyslog-conf=/etc/newsyslog.conf --with-syslogd_pid=/var/run/syslogd.pid --with-gzip
+#
 
 CPPFLAGS+= -DPATH_COMPRESS=\"@PATH_COMPRESS@\"
 CPPFLAGS+= -DCOMPRESS_SUFFIX=\"@COMPRESS_SUFFIX@\"
