--- a/configure.in
+++ b/configure.in
@@ -6,16 +6,20 @@ dnl This file:  Copyright (C) 1997,1998,1999 Planix, Inc.
 dnl             see COPYING for details
 
 AC_INIT(newsyslog.c)
-AC_PREREQ(2.12)dnl Required Autoconf version.
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.26 2000/07/07 17:39:57 woods Exp $"])dnl
+dnl Required Autoconf version.
+AC_PREREQ(2.12)
 
-PACKAGE=newsyslog
-VERSION=1.0.98-Preview
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.27 2000/12/01 19:56:58 woods Exp $"])
+
+dnl for Automake
+PACKAGE="newsyslog"
+VERSION="1.0.98-Preview"
 
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
-AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_SUBST(PACKAGE)
+
+AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_SUBST(VERSION)
 
 AM_SANITY_CHECK
@@ -29,7 +33,7 @@ AC_LANG_C
 
 AC_PROG_MAKE_SET
 
-AM_PROG_INSTALL
+AC_PROG_INSTALL
 
 missing_dir=`cd $ac_aux_dir && pwd`
 AM_MISSING_PROG(ACLOCAL, aclocal, $missing_dir)
@@ -72,67 +76,83 @@ dnl memset(), so because bzero() can be defined in terms of memset()
 dnl by a macro, but not the other way around, we use bzero() in the
 dnl code and account for its absense with a macro.
 
-AC_CHECK_FUNCS(bzero strchr)
+dnl Also note that checking for flock() here doesn't guarantee a
+dnl working flock()!
 
+AC_CHECK_FUNCS(bzero strchr, flock)
+
+dnl handle "--with-gzip"
 AC_MSG_CHECKING(for name of archive compression program)
+
 AC_ARG_WITH(gzip,
 	[  --with-gzip             use GNU Zip instead of compress],
 	[COMPRESS_PROG=gzip
 	COMPRESS_SUFFIX=".gz"],
 	[COMPRESS_PROG=compress
 	COMPRESS_SUFFIX=".Z"]
-)dnl
+)
+
 AC_MSG_RESULT($COMPRESS_PROG with $COMPRESS_SUFFIX)
 AC_SUBST(COMPRESS_SUFFIX)
 AC_DEFINE_UNQUOTED(COMPRESS_SUFFIX, "$COMPRESS_SUFFIX")
+
 AC_PATH_PROG(PATH_COMPRESS, $COMPRESS_PROG)
 AC_SUBST(PATH_COMPRESS)
 AC_DEFINE_UNQUOTED(PATH_COMPRESS, "$PATH_COMPRESS")
 
+dnl handle "--with-syslogd_pid=path"
 AC_MSG_CHECKING(for name of syslogd's pid file)
+
 case "$localstatedir" in
 /*)
 	expandedlocalstatedir=$localstatedir
 	;;
 *)
 	oldprefix=$prefix
-	if test "x$prefix" = xNONE ; then
+	if test ".$prefix" = .NONE ; then
 		prefix=$ac_default_prefix
 	fi
 	expandedlocalstatedir=`eval echo $localstatedir`
 	prefix=$oldprefix
 	;;
 esac
+
 AC_ARG_WITH(syslogd_pid,
 	[  --with-syslogd_pid=path syslogd's PID file (localstatedir/run/syslog.pid)],
 	[syslogd_pidfile=$withval],
 	[syslogd_pidfile=$expandedlocalstatedir/run/syslog.pid]
-)dnl
+)
+
 AC_SUBST(syslogd_pidfile)
 AC_DEFINE_UNQUOTED(PATH_SYSLOGD_PIDFILE, "$syslogd_pidfile")
 AC_MSG_RESULT($syslogd_pidfile)
 
+dnl handle "--with-newsyslog_conf=path"
 AC_MSG_CHECKING(for name of config file)
+
 case "$sysconfdir" in
 /*)
 	expandedsysconfdir=$sysconfdir
 	;;
 *)
 	oldprefix=$prefix
-	if test "x$prefix" = xNONE ; then
+	if test ".$prefix" = .NONE ; then
 		prefix=$ac_default_prefix
 	fi
 	expandedsysconfdir=`eval echo $sysconfdir`
 	prefix=$oldprefix
 	;;
 esac
+
 AC_ARG_WITH(newsyslog_conf,
 	[  --with-newsyslog_conf=path configuration file (sysconfdir/newsyslog.conf)],
 	[path_config=$withval],
 	[path_config=$expandedsysconfdir/newsyslog.conf]
-)dnl
+)
+
 AC_SUBST(path_config)
 AC_DEFINE_UNQUOTED(PATH_CONFIG, "$path_config")
 AC_MSG_RESULT($path_config)
 
+dnl Files to create from their *.in templates:
 AC_OUTPUT([Makefile Makefile.BSD newsyslog.conf.5so newsyslog.8so])
