--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -1,28 +1,29 @@
 #
 # sample configuration file for newsyslog
 #
-# log_filename  [owner.group] mode count kb   hrs [flgs][/pid_file] [sig]
-#               |             |    |     |    |   |     |
-/var/log/aculog uucp:dialer   640  10    *    24  Z0    /dev/null   INT
-/var/log/auth                 640  10    100  *   Z0
-/var/log/authpriv             640  10    100  *   Z0
-/var/log/cron                 640  3     *    24  Z0                HUP
-/var/log/daemon               644  4     500  *   Z0
-/var/log/debug                640  4     1000 *   Z0
-/var/log/httpd/access_log     644  5     *    168 Z0    # only last one
-/var/log/httpd/error_log      644  5     *    168 Z0    /var/run/httpd.pid
-/var/log/kerberos.log         640  10    *    24  Z0    /dev/null
-/var/log/kern                 644  10    500  *   Z0
-/var/log/local                644  10    *    168 Z0
-/var/log/lpd-errs daemon:staff 644 4     100  *   Z0
-/var/log/lpr                  644  5     250  *   Z0
-/var/log/mail   root:staff    640  52    *    168 Z0
-/var/log/messages             644  10    *    168 Z0
-/var/log/news   news:news     644  2     *    24  Z0
-/var/log/smail/logfile        644  5     *    168 Z0    /dev/null
-/var/log/smail/paniclog       644  5     *    168 Z0    /dev/null
-/var/log/syslog               640  3     500  *   Z0
-/var/log/user                 644  10    500  *   Z0
-/var/log/uucp   uucp:operator 644  5     *    168 Z0
-/var/log/wtmp                 644  10    1000 *   BZ0
-/var/log/xferlog              640  10    *    168 Z0
+# log_filename  [owner:group] mode count kb   hrs/at [flgs][/pid_file][sig]
+#               |             |    |     |    |      |     |
+/var/log/aculog uucp:dialer   640  10    *    ML     Z0    /dev/null  INT
+/var/log/auth                 640  10    100  *      Z0
+/var/log/authpriv             640  10    100  *      Z0
+/var/log/cron                 640  3     *    D0     Z0               HUP
+/var/log/daemon               644  4     500  168    Z0
+/var/log/debug                640  4     1000 168    Z0
+/var/log/httpd/access_log     644  5     *    D0     Z0    # only last one
+/var/log/httpd/error_log      644  5     *    D0     Z0  /var/run/httpd.pid USR1
+/var/log/kerberos.log         640  10    *    D0     Z0    /dev/null
+/var/log/kern                 644  10    500  *      Z0
+/var/log/local                644  10    1000 168    Z0
+/var/log/lpd-errs daemon:staff 644 4     100  *      Z0
+/var/log/lpd-acct daemon:staff 644 4     *    ML     Z0
+/var/log/lpr                  644  5     250  *      Z0
+/var/log/mail  root:staff     640  52    *    W0D0   Z0
+/var/log/messages             644  10    1000 168    Z0
+/var/log/news  news:news      644  2     *    D0     Z0
+/var/log/smail/logfile        644  5     *    W0D0   Z0    /dev/null
+/var/log/smail/paniclog       644  5     500  168-D0 Z0    /dev/null
+/var/log/syslog               640  3     500  *      Z0
+/var/log/user                 644  10    500  *      Z0
+/var/log/uucp  uucp:operator  644  5     *    W0D0   Z0
+/var/log/wtmp                 644  10    *    ML     BZ0
+/var/log/xferlog              640  10    *    W0D0   Z0
