--- a/newsyslog.8so.in
+++ b/newsyslog.8so.in
@@ -9,7 +9,7 @@
 .\"	from: @(#)newsyslog.8
 .\"	FreeBSD: newsyslog.8,v 1.9 1997/10/06 07:46:06 charnier Exp
 .\"
-.\"ident	"@(#)newsyslog:$Name:  $:$Id: newsyslog.8so.in,v 1.6 2000/12/01 20:05:21 woods Exp $"
+.\"ident	"@(#)newsyslog:$Name:  $:$Id: newsyslog.8so.in,v 1.7 2001/02/23 00:49:13 woods Exp $"
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -33,8 +33,15 @@
 .Nd maintain system log files to manageable sizes
 .Sh SYNOPSIS
 .Nm newsyslog
-.Op Fl m Li | Fl M
-.Op Fl rnv
+.Oo
+.Fl m
+.Li |
+.Fl M
+.Li |
+.Fl i Ar interval
+.Oc
+.Op Fl T Ar HH:MM
+.Op Fl Fnrv
 .Op Fl f Ar config_file
 .Op Fl p Ar syslogd_pidfile
 .Op Ar log_file ...
@@ -183,6 +190,11 @@ will not be able to send a HUP signal to
 .Nm syslogd
 or most other daemons so this option is probably only useful for
 debugging unless an alternate configuration file is specified.
+.It Fl T Ar HH:MM
+Pretend the current time is
+.Ar HH:MM
+instead of the current time.  The time given is always treated as a
+future time.  This option is mostly useful for testing configurations.
 .It Fl v
 Place 
 .Nm
