--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.13 2000/12/01 20:38:45 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.14 2001/02/23 00:50:02 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -15,8 +15,10 @@ man_MANS = newsyslog.conf.5 newsyslog.8
 catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
 soelim_MANS = newsyslog.conf.5so newsyslog.8so
 
+catmandir = @mandir@
+
 # things that exist in the repository
-DIST_OTHER = README.developers ToDo compat/machine/ansi.h compat/sys/cdefs.h
+DIST_OTHER = README.developers ToDo
 
 # things that must be made during 'make dist'
 DIST_MAKE = $(soelim_MANS) $(catman_MANS) Makefile.BSD-dist
@@ -35,9 +37,13 @@ MAINTAINERCLEANFILES = install-sh missing mkinstalldirs INSTALL README.developer
 ##
 
 NROFF = nroff
+TROFF = troff
+ROFFDEV = -Tps
+PIC = pic
+TBL = tbl
 SOELIM = soelim
 
-SUFFIXES = .5 .8 .5so .8so .cat8 .cat5
+SUFFIXES = .5 .8 .5so .8so .cat8 .cat5 .ps .txt
 
 .8.cat8 .5.cat5:
 	@rm -f $@
@@ -47,15 +53,39 @@ SUFFIXES = .5 .8 .5so .8so .cat8 .cat5
 	@rm -f $@
 	$(SOELIM) $(srcdir)/$< > $@ || (rm -f $@; exit 1)
 
+.8.txt:
+	$(SOELIM) $(srcdir)/$? | $(TBL) | $(NROFF) -mdoc > $@
+
+.8.ps:
+	$(SOELIM) $(srcdir)/$? | $(TBL) | $(TROFF) -mdoc $(ROFFDEV) > $@
+
+.5.txt:
+	$(SOELIM) $(srcdir)/$? | $(TBL) | $(NROFF) -mdoc > $@
+
+.5.ps:
+	$(SOELIM) $(srcdir)/$? | $(TBL) | $(TROFF) -mdoc $(ROFFDEV) > $@
+
 CLEANFILES = $(catman_MANS) $(man_MANS) 
 
 #
-# hard-coded dependencies
+# hard-coded dependencies and extensions
 #
 
 $(PROGRAMS): Makefile Makefile.BSD
 
 $(man_MANS): config.status
+
+man catman: $(catman_MANS)
+
+all-local: catman
+
+install-data-local: install-man-local
+
+install-man-local:
+	$(mkinstalldirs) $(catmandir)/cat5
+	$(mkinstalldirs) $(catmandir)/cat8
+	$(INSTALL_DATA) newsyslog.conf.cat5 $(catmandir)/cat5/newsyslog.conf.0
+	$(INSTALL_DATA) newsyslog.cat8 $(catmandir)/cat8/newsyslog.0
 
 newsyslog.conf.5: newsyslog.conf newsyslog.conf.5so
 
