- new handling for new ./VERSION file (script).

--- a/configure.in
+++ b/configure.in
@@ -10,17 +10,36 @@ AC_INIT(newsyslog.c)
 dnl Required Autoconf version.
 AC_PREREQ(2.12)
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.30 2000/12/01 22:25:27 woods Exp $"])
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.31 2001/02/23 01:30:01 woods Exp $"])
 
 dnl for Automake
 PACKAGE="newsyslog"
-VERSION="1.0.99-Preview"
 
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_SUBST(PACKAGE)
 
+. $srcdir/VERSION
+
+changequote(,)
+VERSION_MAJOR=`expr "$VERSION" : '^\([0-9]*\)'`
+VERSION_MINOR=`expr "$VERSION" : '^[0-9]*\.\([0-9]*\)'`
+VERSION_PATCH=`expr "$VERSION" : '^[0-9]*\.[0-9]*\.\([0-9]*\)'`
+VERSION_SUFFIX=`expr "$VERSION" : '^[0-9]*\.[0-9]*\.[0-9]*-\([a-zA-Z0-9._,+]*\)'`
+VERSION_COMMENT=`expr "$VERSION" : '^.*#\(.*\)'`
+changequote([,])
+
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_SUBST(VERSION)
+AC_DEFINE_UNQUOTED(VERSION_MAJOR, $VERSION_MAJOR)
+AC_SUBST(VERSION_MAJOR)
+AC_DEFINE_UNQUOTED(VERSION_MINOR, $VERSION_MINOR)
+AC_SUBST(VERSION_MINOR)
+AC_DEFINE_UNQUOTED(VERSION_PATCH, $VERSION_PATCH)
+AC_SUBST(VERSION_PATCH)
+AC_DEFINE_UNQUOTED(VERSION_SUFFIX, "$VERSION_SUFFIX")
+AC_SUBST(VERSION_SUFFIX)
+AC_DEFINE_UNQUOTED(VERSION_COMMENT, "$VERSION_COMMENT")
+AC_SUBST(VERSION_COMMENT)
 
 AM_SANITY_CHECK
 
