- fix things so the cat-able manual pages are distributed and usable.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997,1998,1999,2000,2001 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.17 2001/03/06 02:05:34 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.18 2001/03/06 02:45:10 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -12,8 +12,9 @@ bin_PROGRAMS = newsyslog
 
 man_MANS = newsyslog.conf.5 newsyslog.8
 
-catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
 soelim_MANS = newsyslog.conf.5so newsyslog.8so
+catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
+catman_MANS_dist = newsyslog.conf.cat5-dist newsyslog.cat8-dist
 
 catmandir = @mandir@
 
@@ -21,7 +22,7 @@ catmandir = @mandir@
 DIST_OTHER = README.developers ToDo
 
 # things that must be made during 'make dist'
-DIST_MAKE = $(soelim_MANS) $(catman_MANS) Makefile.BSD-dist
+DIST_MAKE = $(catman_MANS_dist) Makefile.BSD-dist
 
 EXTRA_DIST = $(DIST_OTHER) $(DIST_MAKE)
 
@@ -30,7 +31,9 @@ PATH_CONFIG = @path_config@
 PATH_SYSLOGD_PIDFILE = @syslog_pidfile@
 
 # Mention here files which are created using '--add-missing'
-MAINTAINERCLEANFILES = install-sh missing mkinstalldirs INSTALL README.developers $(catman_MANS) $(man_MANS) 
+MAINTAINERCLEANFILES = install-sh missing mkinstalldirs INSTALL README.developers $(catman_MANS_dist)
+
+CLEANFILES = $(catman_MANS) $(man_MANS)
 
 ##
 ##	local extensions to automake
@@ -77,18 +80,38 @@ man catman: $(catman_MANS)
 
 all-local: catman
 
-install-data-local: install-man-local
+# install the cat-able manual pages too...
+#
+install-data-local: install-catman-local
 
-install-man-local:
+# the normal manuals are installed by automake rules
+#
+install-catman-local:
 	$(mkinstalldirs) $(catmandir)/cat5
 	$(mkinstalldirs) $(catmandir)/cat8
 	$(INSTALL_DATA) newsyslog.conf.cat5 $(catmandir)/cat5/newsyslog.conf.0
 	$(INSTALL_DATA) newsyslog.cat8 $(catmandir)/cat8/newsyslog.0
 
+# if you have no mandoc macros you might be able to use this rule, or
+# something similar, to install the distributed versions of the
+# cattable manual pages.  Make this before "make install"
+#
+copy-dist-catman:
+	cp newsyslog.conf.cat5-dist newsyslog.conf.cat5
+	cp newsyslog.cat8-dist newsyslog.cat8
+
 newsyslog.conf.5: newsyslog.conf newsyslog.conf.5so
 
 # (no .so's in here yet....)
 newsyslog.8: newsyslog.8so
+
+newsyslog.conf.cat5-dist: newsyslog.conf.cat5
+	@rm -f $@
+	cp $? $@
+
+newsyslog.cat8-dist: newsyslog.cat8
+	@rm -f $@
+	cp $? $@
 
 Makefile.BSD-dist: Makefile.BSD
 	@rm -f $@
